2008-07-25  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Speedup startup with many pubsub
	nodes (EJAB-669)
	* src/mod_pubsub/nodetree_default.erl: Likewise

2008-07-24  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Include example PAM configuration file
	ejabberd.pam (thanks to Evgeniy Khramtsov)(EJAB-704)
	* doc/guide.html: Likewise

	* src/mod_proxy65/mod_proxy65_lib.erl: Send protocol compliant
	SOCKS5 reply; this breaks support of uncompliant Psi<0.10 (thanks
	to Felix Geyer)(EJAB-632)
	* src/mod_proxy65/mod_proxy65_stream.erl: Likewise

	* src/mod_register.erl: When a registration is blocked due to IP
	limitation, return description in error stanza (EJAB-692)

2008-07-24  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Allow owner to subscribe/get its own
	node (EJAB-705)

2008-07-24  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document room options allow_visitor_nickchange
	and allow_visitor_status (EJAB-624)
	* doc/guide.html: Likewise

2008-07-23  Geoff Cant  <geoff.cant@process-one.net>

	* src/mod_muc/mod_muc_room.erl: new room options,
	allow_visitor_presence and allow_visitor_nickchange to
	block/enable visitors to broadcast presence updates to the room
	(EJAB-624).
	* src/mod_muc/mod_muc_room.erl: renaming allow_visitor_presence to
	allow_visitor_status and altering effect (when false) to remove
	custom status tags in presence broadcasts to muc rooms by
	visitors.

2008-07-23  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: remove_user hook removes
	subscriptions (EJAB-684), send the last published and not the
	first published item (EJAB-675), remove the pubsub/nodes tree,
	subscribing to a node sends only last items (EJAB-700)
	* src/mod_pubsub/node_pep.erl: added acl and jid match on node
	creation permission (EJAB-663)
	* src/mod_pubsub/node_default.erl: fix node creation permission 
	issue for service